[package]
name = "httpd-util"
version = "0.1.6"
authors = ["Piers Finlayson <piers@packom.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/packom/httpd-util"
documentation = "https://github.com/packom/httpd-util"
homepage = "https://github.com/packom/httpd-util"
description = "A set of utilities for building HTTP microservices"
keywords = ["http","utils","openapi","swagger"]
categories = ["api-bindings","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/httpd-util", branch = "master" }

[dependencies]
pnet = "0.26"
log = "0.4"
signal-hook = "0.1"
openssl = {version = "0.10"}
clap = "2"
env_logger = "0.7"
